unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/Producto_de_Plan_de_Venta__c.object-meta.xml
<CustomObject>
    <label>Producto de Plan de Venta</label>
    <nameField>
        <displayFormat>PPV-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Nombre de Producto de Plan de Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de Plan de Venta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>