unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Lista_de_Precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Productos de Plan de Venta</relationshipLabel>
    <relationshipName>Productos_de_Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>