unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Nombre_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Producto__c</fullName>
    <formula>Producto__r.Name</formula>
    <label>Nombre del Producto</label>
    <type>Text</type>
</CustomField>