unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Productos de Plan de Venta</relationshipLabel>
    <relationshipName>Productos_de_Plan_de_Venta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>