unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Precio_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_venta__c</fullName>
    <description>El campo muestra el precio de venta que esta almacenado en la lista de precios</description>
    <formula>Lista_de_Precios__r.Precio_de_Venta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Solo es un campo de visualización, cualquier cambio al mismo ir a la lista de precios</inlineHelpText>
    <label>Precio de venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>