unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Precio_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Precio_del_Producto__c</fullName>
    <formula>Precio_Unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio del Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>