unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Unitario__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Precio Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>