unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de Plan de Venta</relationshipLabel>
    <relationshipName>Productos_de_Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>