unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Producto_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de oportunidad</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Productos de Plan de Venta</relationshipLabel>
    <relationshipName>Productos_de_Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>