unpackaged/main/default/objects/Producto_de_Plan_de_Venta__c/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <label>Tipo de Producto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>